Fixed fast maps scrolling and some layout issues

--- a/public/assets/ss-bulma.css
+++ b/public/assets/ss-bulma.css
@@ -716,7 +716,7 @@ html {
 	-webkit-font-smoothing: antialiased;
 	min-width: 300px;
 	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow-y: auto;
 	text-rendering: optimizeLegibility;
 	text-size-adjust: 100%;
 }
